Added rain info. DAT-1563
